fixed 90% of the flickering on the sticky header

--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -12,7 +12,7 @@ menu{
 	font: inherit;
 	vertical-align: baseline;
 } */
-.makeStyles-mainNavWrapper-61.sticky{
+/* .makeStyles-mainNavWrapper-61.sticky{
   position: fixed;
   top: 0px;
   opacity: 1;
@@ -29,7 +29,7 @@ menu{
   opacity: 0;
   position: absolute;
   transition: opacity 1s ease;
-}
+} */
 
 body {
   font-family: sans-serif;
@@ -37,7 +37,7 @@ body {
   background: #eee;
 }
 
-.makeStyles-mainNav-60 ul {
+/* .makeStyles-mainNav-60 ul {
   z-index: 2;
   text-align: right;
   list-style-type: none;
@@ -57,7 +57,7 @@ body {
 .makeStyles-mainNav-60 li {
   display: inline-block;
   margin-left: 3%;
-}
+} */
 
 h1 {
   font-family: 'publica sans bold','Segoe UI', Tahoma, Geneva, Verdana, sans-serif
